there we go, had to add a device binding threre. Works as I expected. It's worth inspecting deeper before using but I think it's good to go!

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,10 @@ services:
   qbnox_plus:
     build: .
     container_name: qbnox_plus
+    cap_add:
+      - NET_ADMIN
+    devices:
+      - "/dev/net/tun:/dev/net/tun"      
     ports:
       - "8080:8080"
     volumes:
